# eliseai-gtm-tool

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  app.py  main.py  pyproject.toml
.claude/commands/: phase-close.md  precheck.md
.claude/rules/: conventions.md  enrichment.md  outreach.md  scoring.md  tests.md
data/: leads_input.csv
docs/: api-notes.md  architecture.md  rollout-plan.md  scoring-logic.md
instructions/: eliseai-takehome-assessment-instructions.md
outputs/arbor-properties-2200-pleasant-valley-dr-austin-tx/: assessment.json  email.txt  enrichment.json
outputs/bell-partners-70-perimeter-center-e-atlanta-ga/: assessment.json  email.txt  enrichment.json
outputs/bh-management-103-sw-3rd-st-des-moines-ia/: assessment.json  email.txt  enrichment.json
outputs/columbia-residential-135-hampstead-ave-savannah-ga/: assessment.json  email.txt  enrichment.json
outputs/cortland-4647-n-campbell-ave-tucson-az/: assessment.json  email.txt  enrichment.json
outputs/executive-properties-inc-733-w-market-st-akron-oh/: assessment.json  email.txt  enrichment.json
outputs/first-pm-usa-6170-shallowford-rd-chattanooga-tn/: assessment.json  email.txt  enrichment.json
outputs/greystar-3333-harry-hines-blvd-dallas-tx/: assessment.json  email.txt  enrichment.json
outputs/group-one-real-estate-5302-everhart-rd-corpus-christi-tx/: assessment.json  email.txt  enrichment.json
tests/: conftest.py  test_config.py  test_email_generator.py  test_enrichment.py  test_models.py  test_pipeline.py  test_scheduler.py  test_scorer.py  test_utils.py
(+63 files in other folders)
